# wikiconv-analyze-pages

./: .gitignore  cmds.txt  delme.json  pyproject.toml
assets/mean-var/: ca.json  en.json  es.json  it.json
assets/user-emotions/: it.json
docker-db/: docker-compose.yml
json/: ca-gender.json  ca-reply-dropoff.json  ca-reply.json  ca-user-dropoff.json  ca-user.json  delme.json  en-reply-dropoff.json  en-reply.json  en-user-new.json  es-gender.json  es-reply-dropoff.json  es-reply.json  es-user-dropoff.json  es-user.json  it-gender.json  it-reply-dropoff.json  it-reply.json  it-user-dropoff.json  it-user.json
output/: categories_mean_var.txt  categories_mean_var_human.txt
scripts/: chart-gender.py  chart-mean-var.py  chart-users.py  getuserinfo.py
wikiconv-analyze-pages/: __main__.py  analyze.py  file_utils.py  test.py  types.py
wikiconv-analyze-pages/analyzers/: __init__.py  analyzer.py  by_gender.py  by_page.py  emotion_lexicon.py  emotion_lexicon_db.py  emotions_by_time.py  item_word_cloud.py  mean_var.py  minify.py  month_word_cloud.py  reply_to.py  users_info.py
wikiconv-analyze-pages/utils/: csv_writer.py  database.py  discussion_graph.py  emotion_lexicon.py  file_utils.py  timestamp.py  types.py
wikiconv-analyze-pages/utils/database-old/: base.py  metric.py
