[tool.poetry]
name = "wikiconv-analyze-pages"
version = "0.1.0"
description = ""
authors = ["nicolatoscan <nicolatoscan99@outlook.it>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
